<resources>
    <string name="app_name">Spordisemu</string>
    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyBdTM0VhUT6A3WjKiW-ch57NrXaTwCNOXI</string>
    <string name="apiUrl">http://spordisemu.herokuapp.com</string>

    <string name="pealeht">Pealeht</string>
    <string name="action_settings">Seaded</string>
    <string name="title_activity_result">Tulemused</string>
    <string name="otsing">Otsing</string>
    <string name="profiil">Profiil</string>
    <string name="sobrad">Sõbrad</string>
    <string name="logivalja">Logi välja</string>
    <string name="minu_spordialad">Minu spordialad</string>

    <string name="name">Kasutajatunnus</string>
    <string name="button_login">Logi sisse</string>
    <string name="registrateText">Registreeru</string>
    <string name="email">E-mail</string>
    <string name="username">Kasutajanimi</string>
    <string name="eesnimi">Eesnimi</string>
    <string name="perekonnanimi">Perekonnanimi</string>
    <string name="sugu">Sugu:</string>
    <string name="mees">Mees</string>
    <string name="naine">Naine</string>
    <string name="parool1">Parool</string>
    <string name="parool2">Parool uuesti</string>

    <string name="lisa_spordiala">Lisa spordiala</string>
    <string name="lisatud_spordiala">Lisatud spordiala:</string>
    <string name="lisa">Lisa</string>
    <string name="edasi">Edasi</string>
    <string name="lisapilt">Lisa pilt</string>
    <string name="lisauuspilt">Lisa uus pilt</string>
    <string name="jatavahele">Jäta vahele</string>
    <string name="lisa_asukoht">Lisa asukoht</string>
    <string name="vali_linn">Vali linn</string>
    <string name="täpne_asukoht">Vali täpne asukoht</string>
    <string name="kinnita">Kinnita</string>

    <string-array name="sportList">
        <item>Spordiala</item>
        <item>Korvpall</item>
        <item>Jalgpall</item>
        <item>Sulgpall</item>
        <item>Jooga</item>
    </string-array>

    <string-array name="raskustaseList">
        <item>Tase</item>
        <item>Algaja</item>
        <item>Kerge</item>
        <item>Keskmine</item>
        <item>Raske</item>
        <item>Ekspert</item>
    </string-array>

    <string name="specialCharNum">Lubatud on ainult tähed ja numbrid</string>
    <string name="specialChar">Nimes on lubatud ainult tähed</string>
    <string name="chars4">Kasutajanimi peab olema vähemalt 4 tähemärki pikk</string>
    <string name="fill">Täida väli</string>
    <string name="correctEmail">Sisesta korrektne e-mail</string>
    <string name="checkPw">Paroolid ei kattu</string>
    <string name="pwLength">Parool peab olema vähemalt 6 tähemärki pikk</string>

    <string name="osale">Osale</string>
    <string name="korraldaja">Korraldaja:</string>
    <string name="wait">Palun oota</string>
    <string name="vajutamataNupp">Lisa spordiala!</string>
    <string name="valimataSport">Spordiala või tase on jäänud valimata!</string>
    <string name="success">Osaled sellel treeningul</string>
    <string name="lahku">Lahku</string>
    <string name="cancel">Tagasi</string>
    <string name="kinnitaOsalemine">Oled kindel, et soovid sellel treeningul osaleda?</string>
    <string name="kinnitaLahkumine">Oled kindel, et ei soovi sellel treeningul osaleda?</string>

    <string name="selectImg">Vali pilt</string>
    <string-array name="lisaPiltList">
        <item>Tee kaameraga pilti</item>
        <item>Vali galeriist</item>
    </string-array>
    <string name="cantFindCropApp">Ei leia rakendust pildi lõikamiseks</string>
    <string name="chooseCrop">Vali rakendus pildi lõikamiseks</string>


    <string name="dateText">Kuupäev: </string>
    <string name="day">dd</string>
    <string name="month">mm</string>
    <string name="year">yyyy</string>

    <string name="timeText">Aeg: </string>
    <string name="hour">hh</string>
    <string name="minutes">mm</string>

    <string name="people">Inimeste arv: </string>
    <string name="min">min</string>
    <string name="max">max</string>

    <string name="men">Mehed</string>
    <string name="women">Naised</string>
    <string name="both">Mõlemad</string>

    <string name="asukoht">Asukoht: </string>
    <string name="trenn">Lisa trenn</string>
    <string name="spordiala">Spordiala: </string>
    <string name="raskustase">Raskustase: </string>

    <string name="timestampError">Liiga suur number</string>
    <string name="yearError">Pole korrektne aasta</string>
    <string name="minError">Ei tohi olla 0 või negatiivne arv</string>
    <string name="maxError">Max arv ei tohi olla väiksem kui min</string>
    <string name="uniqueError">Selline kasutajanimi on juba olemas</string>
    <string name="wentWrong">Midagi läks valesti :(</string>

    <string name="backPractice">Kas sa soovid katkestada trenni loomise?</string>
    <string name="backRegistration">Kas sa soovid katkestada registreerimise?</string>

    <string name="osalejateArv">Osalejate arv:</string>
    <string name="eelistatudSugu">Eelistatud sugu:</string>

    <string name="open_drawer">Ava menüü</string>
    <string name="close_drawer">Sule menüü</string>

    <string name="estonia">Eesti</string>

    <string name="comments">Kommentaarid</string>
    <string name="commentBtn">Kirjuta kommentaar</string>
    <string name="commentTooShort">Sisesta kommentaar!</string>

    <string name="changeProfile">Muuda profiili</string>
    <string name="changePassword">Vaheta parooli</string>
    <string name="changeNotifications">Teavitused</string>
    <string name="terms">Kasutustingimused</string>

    <string name="termsLong">Kasutustingimused on tingimused kasutamiseks, et oleks hea kasutada tingimusi</string>

    <string name="oldPassword">Vana salasõna</string>
    <string name="newPassword1">Uus salasõna</string>
    <string name="newPassword2">Uus salasõna uuesti</string>
    <string name="wrongPw">Vale parool</string>
    <string name="passwordIsChanged">Parool on edukalt vahetatud</string>

    <string name="third_party_title">Kolmandad osapooled</string>
    <string name="third_party">Me ei jaga teie andmeid kolmandate osapooltega.</string>
</resources>
