<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/spordialaText"
            android:paddingStart="10dp"
            android:textSize="18sp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/spordiala"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/sport"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#fff1f1f1"
            android:popupBackground="#fff1f1f1"
            android:layout_marginRight="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/raskustaseText"
            android:paddingStart="10dp"
            android:textSize="18sp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/raskustase"
            android:layout_marginTop="10dp" />

        <Spinner
            android:id="@+id/raskustase"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#fff1f1f1"
            android:popupBackground="#fff1f1f1"
            android:layout_marginRight="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/dateText"
            android:paddingStart="10dp"
            android:textSize="18sp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/dateText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/day"
            android:background="#fff1f1f1"
            android:textColorHint="#ff939393"
            android:textSize="16sp"
            android:hint="@string/day"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:layout_weight=".10"
            android:nextFocusDown="@+id/month"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/month"
            android:background="#fff1f1f1"
            android:textColorHint="#ff939393"
            android:textSize="16sp"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:hint="@string/month"
            android:layout_weight=".10"
            android:nextFocusDown="@+id/year"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/year"
            android:background="#fff1f1f1"
            android:textColorHint="#ff939393"
            android:textSize="16sp"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:hint="@string/year"
            android:layout_weight=".10"
            android:nextFocusDown="@+id/hour"
            android:layout_marginRight="20dp" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/timeText"
            android:id="@+id/timeText"
            android:paddingStart="10dp"
            android:textSize="18sp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/hour"
            android:background="#fff1f1f1"
            android:textColorHint="#ff939393"
            android:textSize="16sp"
            android:hint="@string/hour"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:layout_weight=".20"
            android:nextFocusDown="@+id/minutes"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/minutes"
            android:background="#fff1f1f1"
            android:textColorHint="#ff939393"
            android:textSize="16sp"
            android:hint="@string/minutes"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:layout_weight=".20"
            android:nextFocusDown="@+id/location"
            android:layout_marginRight="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/asukoht"
            android:id="@+id/locationText"
            android:paddingStart="10dp"
            android:textSize="18sp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:id="@+id/location"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:textColorHint="#ff939393"
            android:textSize="16sp"
            android:background="#fff1f1f1"
            android:layout_marginRight="20dp"
            android:nextFocusDown="@+id/min"
            android:inputType="textCapWords|textPostalAddress" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/people"
            android:id="@+id/people"
            android:paddingStart="10dp"
            android:textSize="18sp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/min"
            android:background="#fff1f1f1"
            android:textColorHint="#ff939393"
            android:textSize="16sp"
            android:hint="@string/min"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:layout_weight=".20"
            android:nextFocusDown="@+id/max"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/max"
            android:background="#fff1f1f1"
            android:textColorHint="#ff939393"
            android:textSize="16sp"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:hint="@string/max"
            android:layout_weight=".20"
            android:layout_marginRight="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sugu"
            android:id="@+id/sugu"
            android:paddingStart="10dp"
            android:textSize="18sp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:id="@+id/gender">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/men"
                android:id="@+id/r1"
                android:layout_marginTop="6dp"
                android:buttonTint="#686768"
                android:textColor="#686768"
                android:textSize="16sp"
                android:layout_weight=".20" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/women"
                android:id="@+id/r2"
                android:layout_marginTop="6dp"
                android:buttonTint="#686768"
                android:textColor="#686768"
                android:textSize="16sp"
                android:layout_weight=".20" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both"
                android:id="@+id/r3"
                android:layout_marginTop="6dp"
                android:buttonTint="#686768"
                android:textColor="#686768"
                android:textSize="16sp"
                android:layout_weight=".20"
                android:layout_marginRight="20dp"
                android:checked="true" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:textColor="#818081"
            android:id="@+id/button7"
            android:background="#fff"
            android:stateListAnimator="@null"
            android:onClick="onCancelClick"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/trenn"
            android:textColor="#fff"
            android:id="@+id/createPractice"
            android:layout_gravity="bottom"
            android:background="#40bf40"
            android:stateListAnimator="@null"
            android:onClick="createPractice"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

</LinearLayout>